--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-datepicker": "^4.10.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.5",
+    "react-icons": "^4.6.0",
     "react-intl": "^6.3.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^5.3.0",
