--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-ts-template-making",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
+  "type": "commonjs",
   "scripts": {
     "generate": "plop --plopfile internals/generators/index.js",
     "dev": "vite",
@@ -41,6 +41,7 @@
     "@types/react-slick": "^0.23.10",
     "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^3.1.0",
+    "plop": "^2.7.4",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
   }
